<resources>
    <string name="HaveAccount">Don\'t have an account?</string>
    <string name="FPass"><u>Forgot Password?</u></string>
    <string name="Account">Already have an  account?</string>
    <string name="Home_Title">Explore What \nYour Home Needs</string>
    <string name="tuttitle1">Lorem ipsum dolor sit amet, consectetur <br> adipiscing elit. Tortor velit, aliquet amet, sit potenti</br>
    <br> nisl convallis felis, dignissim. Non laoreet lectus</br>lorem nibh duis pellentesque
    </string>
    <string name="bumper_offer_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc consectetur velit at massa vehicula, quis fringilla urna gravida.</string>
    <string name="material">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent mi id libero lorem est, dictum pulvinar
        pretium. Lectus sit lacus ut id vitae phasellus bibendum.
        Sapien aenean enim pulvinar morbi. Fermentum et amet fringilla adipiscing scelerisque ac adipiscing. Quis tellus massa</string>
    <string name="meil">Meilleur Services</string>
    <string name="serviceHeading">Requested Service List</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="search">Search</string>
    <string name="status">Status</string>
    <string name="dateandTime">12/09/2019 4:52PM</string>
    <string name="ok">OK</string>
    <string name="app_name">Exobe</string>
    <string name="Login">Login</string>
    <string name="SignUp">Sign up</string>
    <string name="Submit">Submit</string>
    <string name="Register">Don\'t have an account?</string>
    <string name="LOGIN">Already have an account?</string>
    <string name="Check">Remember me</string>
    <string name="ForogtPassword">Please enter your registered email address.</string>
    <string name="tut1">Shop anywhere anytime</string>
    <string name="tut2">The eXobe Shopping Style!</string>
    <string name="tut3">Book services anywhere anytime</string>
    <string name="tut">In the comfort of your smart phone, we provide you with exclusive products at highly competitive prices. Take advantage of our amazing deals for most items in the catalogue. Remember, our deals are on a first come first serve basis!</string>
    <string name="tutorial2">The more shoppers are active in the eXobe marketplace, the more are attractive deals, and the lower are the prices! Invite as many friends and families as possible to be part of the eXobe community by sharing the eXobe link and enjoy lower prices!</string>
    <string name="tutorial3">In the comfort of your smart phone, we
provide you with amazing deals on many categories of services at low costs. Our special offers are available on a first come first service basis. The more are consumers active on the platform the lower are our prices! Share the eXobe link and enjoy lower prices.</string>
    <string name="Email">Enter your email address</string>
    <string name="password">Enter your password</string>
    <string name="phone">Enter your email address</string>
    <string name="Start">Get Started</string>
    <string name="forgot"><u>Forgot password?</u></string>
    <string name="Resend"><u>Resend Code</u></string>
    <string name="login"><u>Login</u></string>
    <string name="register"><u>Register</u></string>
    <string name="OTP">Enter 4- digits code</string>
    <string name="OTPVAL">Please enter the 4-digit verification \ncode that was sent to email\nThe code is valid for 30 minutes.</string>
    <string name="add_Address">Add Address</string>
    <string name="Personal_Details">Personal Details</string>
    <string name="First_Name">Enter first name</string>
    <string name="Last_Name">Enter last name</string>
    <string name="Contact_Number">Enter contact number</string>
    <string name="Address_details">Address details</string>
    <string name="GST_No">GST  No:*</string>
    <string name="Postcode">Postcode*</string>
    <string name="Postcode_">Postcode</string>
    <string name="Address">Address</string>
    <string name="Transport_Name">Transport name</string>
    <string name="Cancel">No</string>
    <string name="cart1">Product Added successfully</string>
    <string name="terms_condition"><![CDATA[Terms & condition]]></string>
    <string name="condition">
Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem mattis amet feugiat ut viverra volutpat adipiscing. Suspendisse cursus maecenas faucibus sollicitudin quisque. Faucibus ultricies sit cursus sit lacus leo consequat. Tristique est fermentum mi neque risus, id. Venenatis aliquam ornare ut magna enim. Posuere viverra blandit porttitor amet phasellus. Aliquet nullam tincidunt diam malesuada. Turpis vestibulum quis erat amet ultricies scelerisque. In luctus facilisis pellentesque enim ut enim amet proin. Morbi eget pellentesque lobortis turpis tellus.
In augue odio enim augue magna in ultrices elementum neque. Purus ut volutpat nec et sit egestas nec orci. Nibh tempus, amet aliquam nulla consectetur vivamus sit sed. Eget urna amet eget bibendum pulvinar non gravida. Imperdiet duis maecenas dignissim molestie amet pellentesque lectus neque sollicitudin. Suspendisse in penatibus nisl ipsum orci aliquet eget. Sed semper sodales egestas malesuada ipsum porttitor. Nulla tellus fringilla dignissim vel maecenas massa. Eget eget vel viverra curabitur id vel sit vel. Non adipiscing velit massa mauris mauris in. Facilisis vel amet odio sollicitudin lectus elit. Augue massa eu, mauris turpis ipsum, mauris, aenean.

    </string>
    <string name="profile">Profile</string>
    <string name="first_name">First Name</string>
    <string name="first_name_value">Sushree</string>
    <string name="last_name">Last Name</string>
    <string name="last_name_value">Padai</string>
    <string name="contact_number">Mobile Number</string>
    <string name="contact_number_value">123456789</string>
    <string name="post_code">Postal Code</string>
    <string name="post_code_value">766034</string>
    <string name="address">Address</string>
    <string name="address_value">Okhla Phase one</string>
    <string name="edit_profile">Edit Profile</string>
    <string-array name="selectCategoryItem">
        <item>Select</item>
        <item>Category 1</item>
        <item>Category 2</item>
        <item>Category 3</item>
        <item>Category 4</item>
        <item>Category 5</item>
    </string-array>
    <string-array name="spinnerHours">
        <item>24 Hours Time</item>
        <item>7</item>
        <item>9</item>
        <item>11</item>
        <item>3</item>
        <item>1</item>
    </string-array>
    <string-array name="spinnerMins">
        <item>Minutes</item>
        <item>60</item>
        <item>55</item>
        <item>45</item>
        <item>40</item>
        <item>35</item>
    </string-array>
    <string name="first_name_hint">First name</string>
    <string name="last_name_hint">Last name</string>
    <string name="contact_number_hint">123456789</string>
    <string name="post_code_hint">000000</string>
    <string name="address_hint">Okhla phase one</string>
    <string name="cancel">Cancel</string>
    <string name="save">Yes</string>
    <string name="settings">Settings</string>
    <string name="term_condition"><![CDATA[Terms of Use]]></string>
    <string name="product_enquiry">Product Enquiry</string>
    <string name="subject">Subject</string>
    <string name="description">Description</string>
    <string name="email">info@max.com</string>
    <string name="thank_you">Thank You !</string>
    <string name="for_sharing_your_query">for sharing your query,</string>
    <string name="our_executive_will_connect_you_soon">our executive will connect you soon!</string>
    <string name="order_history">Order History</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="latest_product_added">latest Product Added</string>
    <string name="shop_by_category">Shop by Category</string>
    <string name="category">Category</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eu bibendum adipiscing viverra diam. Turpis luctus faucibus bibendum augue placerat. Non elit amet, phasellus cras gravida habitasse turpis et. Sagittis, eleifend sed quam placerat eu platea mattis libero. Semper consectetur sit enim sagittis vulputate in quam dolor, viverra. Morbi dui lacus ut netus fringilla egestas elementum. Lobortis vitae ligula orci tellus. Mattis lobortis porttitor dignissim gravida purus amet est diam, diam. Fermentum eu mattis adipiscing quam vel.
Feugiat ultricies ultrices porttitor hac. Viverra pellentesque in sodales aliquam eu in in diam. Feugiat fringilla aenean erat urna ut est tortor condimentum. Enim turpis tortor scelerisque at sit suspendisse. Sed enim eu aliquet id elit aenean platea pulvinar elementum.
Malesuada eleifend sit sit bibendum eget leo sagittis cursus. Pulvinar mi mi amet porttitor. Aenean turpis ut et, praesent aliquam ipsum. Tempor praesent tempus condimentum penatibus arcu donec in dignissim. Condimentum sed enim amet, ac vulputate condimentum volutpat. Sagittis, vulputate dui nullam in quis.
    </string>
    <string name="privacy2">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. In aliquam justo, vitae tellus sagittis. Et rhoncus tortor malesuada urna id lorem in semper.
    </string>
    <string name="about_us">About Us</string>
    <string name="about">The <b>eXobe</b> App is the leading eCommerce Marketplace of products and services where participants come together to co-create value. With <b>eXobe</b>, customers are guaranteed to buy products and consume services at the best possible cost.\n<b>eXobe</b> is your one stop online shopping solution. No need to explore many Apps to get the best deal. <b>eXobe</b> achieves that for you instantly!
</string>
    <string name="faqs">FAQ</string>
    <string name="Update">Update</string>
    <string name="Order_Review">Order Review</string>
    <string name="Continue">Continue</string>
    <string name="Amount_Details">Amount Details</string>
    <string name="accepted_services_list">Accepted Services List</string>
    <string name="thanks_for_accepting">Thanks For Accepting</string>
    <string name="decrption">Enter your Description (if any)</string>
    <string name="send">Send</string>
    <string name="payment_details">Payment Details</string>
    <string name="payment">For confirm the booking order kindly done the payment by using our following details and  upload the receipt.</string>
    <string name="Bank_Details">Bank Details:</string>
    <string name="Card_Payment">Card Payment:</string>
    <string name="UPI_Payment">UPI Payment:</string>
    <string name="addressmain">Okhla Phase-1, New Delhi</string>
    <string name="pincode">Pincode - 123456</string>
    <string name="delete">Are you sure you want to \n delete this address?</string>
    <string name="Services_Available">Services Available</string>
    <string name="Search">Search for a service</string>
    <string name="Services">All Electrition service providers</string>
    <string name="All_Services">All service</string>
    <string name="_98_reviews">98 Reviews</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="description_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc consectetur velit at massa vehicula, quis fringilla urna gravida.</string>
    <string name="thankyou">Thankyou!</string>
    <string name="thankyou_msg">We got your request will get back to you soon</string>
    <string name="line"><color></color>R250.00</string>
    <string name="delete_order">Are you sure you want to \n delete this item?</string>
</resources>