<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.EditProfileActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backButtonEditProfile"
            android:layout_width="@dimen/_15sdp"
            android:layout_height="@dimen/_15sdp"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/_20sdp"
            android:src="@drawable/back_button" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/edit_profile"
            android:textColor="@color/black"
            android:textSize="@dimen/Title" />

    </RelativeLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="8dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="111dp"
            android:layout_height="111dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:src="@drawable/profile_pic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/select_Image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginBottom="2dp"
            android:background="#00FFFFFF"
            android:src="@drawable/ic_baseline_camera_alt_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.619"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="10dp"
       android:paddingBottom="@dimen/_10sdp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/first_name"
            android:textColor="@color/title_myprofile"
            android:textSize="@dimen/Form_ETorTV"
            android:layout_marginHorizontal="@dimen/_5sdp"/>

        <EditText
            android:id="@+id/firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/focus"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz"
            android:fontFamily="@font/poppins_light"
            android:hint="@string/first_name_hint"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:maxLength="20"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="@dimen/Form_ETorTV"
            android:elevation="@dimen/_5sdp"
            android:layout_marginHorizontal="@dimen/_5sdp"/>

        <TextView
            android:id="@+id/errorTvEditFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/error"
            android:layout_marginHorizontal="@dimen/_5sdp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/last_name"
            android:textColor="@color/title_myprofile"
            android:textSize="@dimen/Form_ETorTV"
            android:layout_marginHorizontal="@dimen/_5sdp"/>

        <EditText
            android:id="@+id/lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/focus"
            android:digits=" ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz"
            android:fontFamily="@font/poppins_light"
            android:hint="@string/last_name_hint"
            android:inputType="text"
            android:padding="10dp"
            android:maxLength="20"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="@dimen/Form_ETorTV"
            android:elevation="@dimen/_5sdp"
            android:layout_marginHorizontal="@dimen/_5sdp"/>

        <TextView
            android:id="@+id/errorTvEditLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/error"
            android:layout_marginHorizontal="@dimen/_5sdp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/contact_number"
            android:textColor="@color/title_myprofile"
            android:textSize="@dimen/Form_ETorTV"
            android:layout_marginHorizontal="@dimen/_5sdp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/focus"
            android:gravity="center"
            android:elevation="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:orientation="horizontal">

            <com.hbb20.CountryCodePicker
                android:id="@+id/ccp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:onClick="onCountryPickerClick"
                app:ccp_textSize="15dp"
                app:ccp_defaultPhoneCode="27"
                tools:ignore="MissingClass,OnClick" />

            <EditText
                android:id="@+id/MobileNumber_EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/focus"
                android:fontFamily="@font/poppins_light"
                android:inputType="number"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:hint="Mobile number"
                android:textColor="@color/black"
                android:maxLength="12"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:singleLine="true"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/_12sdp" />

        </LinearLayout>


        <TextView
            android:id="@+id/errorTvEditContactNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/error"
            android:layout_marginHorizontal="@dimen/_5sdp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/post_code"
            android:textColor="@color/title_myprofile"
            android:textSize="@dimen/Form_ETorTV"
            android:layout_marginHorizontal="@dimen/_5sdp" />

        <EditText
            android:id="@+id/postalcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/focus"
            android:fontFamily="@font/poppins_light"
            android:hint="@string/post_code_hint"
            android:inputType="number"
            android:padding="10dp"
            android:maxLength="10"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="@dimen/Form_ETorTV"
            android:elevation="@dimen/_5sdp"
            android:layout_marginHorizontal="@dimen/_5sdp"/>

        <TextView
            android:id="@+id/errorTvEditPostCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/error"
            android:layout_marginHorizontal="@dimen/_5sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/address"
            android:textColor="@color/title_myprofile"
            android:textSize="@dimen/Form_ETorTV"
            android:layout_marginHorizontal="@dimen/_5sdp"/>

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/focus"
            android:fontFamily="@font/poppins_light"
            android:hint="@string/address_hint"
            android:inputType="text"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="@dimen/Form_ETorTV"
            android:elevation="@dimen/_5sdp"
            android:layout_marginHorizontal="@dimen/_5sdp"/>

        <TextView
            android:id="@+id/errorTvEditAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/error"
            android:layout_marginHorizontal="@dimen/_5sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="3dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
           >



            <Button
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:background="@drawable/login_button"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:padding="10dp"
                android:singleLine="true"
                android:text="@string/Update"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/SUbTitle"/>
        </LinearLayout>

</LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>