<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activities.ServicesAvailableListing_SP">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/_18sdp"
        android:layout_marginRight="@dimen/_18sdp"
        android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ServicesAvailable_Back"
            android:layout_width="@dimen/_15sdp"
            android:layout_height="@dimen/_15sdp"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/_20sdp"
            android:src="@drawable/back_button" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/Services_Available"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp" />

    </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/backgroundsearch"

            >
            <ImageView
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:layout_marginLeft="@dimen/_7sdp"
                android:layout_marginTop="@dimen/_7sdp"
                android:src="@drawable/ic_baseline_search_24" />

            <EditText
                android:id="@+id/DFsearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:background="@null"
                android:hint="Search for a service"
                android:maxLength="40"

                android:maxLines="1"
                android:padding="@dimen/_8sdp"
                android:singleLine="true"
                android:textSize="15dp" />


        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_marginTop="@dimen/_15sdp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/AllProvidersList_TextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/Services"
                android:textSize="@dimen/_15sdp"
                android:layout_weight="1.4"
                android:fontFamily="@font/poppins_light"
                android:textColor="@color/red"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/AllServices_TextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/All_Services"
                android:textSize="@dimen/_15sdp"
                android:layout_weight="0.6"
                android:fontFamily="@font/poppins_light"
                android:textColor="@color/black"
                android:textStyle="bold"/>

        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/service_provider_RecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_8sdp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>